--- a/SistemaGestaoProjetosETarefas.csproj
+++ b/SistemaGestaoProjetosETarefas.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="Spectre.Console" Version="0.50.0" />
   </ItemGroup>
 
